--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />  <!-- GANTI YAK -->
+    <link rel="icon" type="image/svg+xml" href="/PannyLogo.png" />  <!-- GANTI YAK -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Panny — AI Companion</title>
     <meta name="theme-color" media="(prefers-color-scheme: light)" content="#ECF4E8" />
